<resources>
    <string name="app_name">Импульс GPS</string>
    <string name="create_safe">Создать</string>
    <string name="scan_qrcode_info">Или отсканируйте QR-код лицензии</string>
    <string name="select_qrcode_file_info">Для регистрации приложения выберите файл-архив конфигурации</string>
    <string name="scan">Сканировать</string>
    <string name="select">Выбрать</string>
    <string name="dialog_reg_license_title">Данные лицензии</string>
    <string name="tab1">ЧАТЫ</string>
    <string name="tab2">ЗВОНОК</string>
    <string name="tab3">КОНТАКТЫ</string>
    <string name="tab4">ИСТОРИЯ</string>
    <string name="add_new_chat">Новый чат</string>
    <string name="hint_full_name">Полное имя</string>
    <string name="hint_sip_number">Номер</string>
    <string name="label_new_contact">Создать контакт</string>
    <string name="label_change_contact">Изменить контакт</string>
    <string name="label_select_contact">Выбор контакта</string>
    <string name="label_create_group">Создание рассылки</string>
    <string name="label_change_group">Редактирование рассылки</string>
    <string name="hint_create_group">Наименование</string>
    <string name="delete_contact_title">Удалить контакт ?</string>
    <string name="not_found_contact">Для отправки сообщений добавьте пользователя в контакты</string>
    <string name="button_synchr_contacts">С сервера</string>
    <string name="button_new_contact">Новый контакт</string>
    <string name="button_new_contact_from_phone">С телефонной книги</string>
    <string name="label_result_sync_contacts">Синхронизация контактов</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повтор пароля</string>
    <string name="conf_file">Файл конфигурации</string>
    <string name="key_file">Файл с ключом</string>
    <string name="enter">Вход</string>
    <string name="next">Далее</string>
    <string name="stop">Стоп</string>
    <string name="err_empty_password">Пароль не введен</string>
    <string name="err_lenght_password">Короткий пароль</string>
    <string name="err_not_match_password">Пароли не совпадают</string>
    <string name="err_file_not_select">Файл не выбран</string>
    <string name="err_file_cfg_not_found">Файл конфигурации не найден</string>
    <string name="err_file_key_reg_not_found">Файл ключа не найден</string>
    <string name="search_config_files">Поиск файлов конфигурации</string>
    <string name="permission_error">Для чтения файлов SD приложению необходимо предоставить разрешение</string>
    <string name="search_config_file_error">Файл конфигурации не найден</string>
    <string name="search_key_file_error">Файл с ключами не найден</string>
    <string name="init_config">Проверка файла конфигурации</string>
    <string name="init_config_error">Ошибка файла конфигурации</string>
    <string name="init_key">Проверка ключевой информации</string>
    <string name="init_key_error">Ошибка ключевой информации</string>
    <string name="save_config">Сохранение конфигурации</string>
    <string name="save_config_error">Ошибка сохранения конфигурации</string>
    <string name="save_key">Сохранение ключевого документа</string>
    <string name="save_key_error">Ошибка сохранения ключевого документа</string>
    <string name="load_config">Загрузка конфигурации</string>
    <string name="load_config_error">Ошибка загрузки конфигурации</string>
    <string name="pass_error">Неверный пароль</string>
    <string name="load_key">Загрузка ключевого документа</string>
    <string name="load_key_error">Ошибка загрузки ключевого документа</string>
    <string name="connecting_with_skzi">Соединение с СКЗИ</string>
    <string name="get_work_key">Получение ключевого блокнота</string>
    <string name="get_work_key_error">Ошибка загрузки действующего КБ</string>
    <string name="start_spo">Запуск</string>
    <plurals name="info_num_add_contacts">
        <item quantity="zero">Добавлено %1$d контактов</item>
        <item quantity="one">Добавлен %1$d контакт</item>
        <item quantity="few">Добавлено %1$d контакта</item>
        <item quantity="many">Добавлено %1$d контактов</item>
    </plurals>
    <plurals name="info_num_change_contacts">
        <item quantity="zero">Изменено %1$d контактов</item>
        <item quantity="one">Изменен %1$d контакт</item>
        <item quantity="few">Изменено %1$d контакта</item>
        <item quantity="many">Изменено %1$d контактов</item>
    </plurals>
    <plurals name="info_num_unread_messages">
        <item quantity="one">%1$d непрочитанное сообщение</item>
        <item quantity="few">%1$d непрочитанных сообщения</item>
        <item quantity="many">%1$d непрочитанных сообщений</item>
<<<<<<< HEAD
        <item quantity="zero">%1$d непрочитанных сообщений</item>
=======
>>>>>>> f1f0ba4992deebceefcbec824421c405340748db
    </plurals>
    <string name="in_call">Входящий вызов</string>
    <string name="out_call">Исходящий вызов</string>
    <string name="miss_call">Пропущенный вызов</string>
    <string name="info_open_file_title">Открытие файла</string>
    <string name="info_open_file">Выбранный файл будет расшифрован\n(результат записывается в каталог SPO_MP_Files)</string>
    <string name="info_open_file_chek_title">Больше не показывать</string>
    <string name="dialog_select_file">Выберите файл</string>
    <string name="dialog_select_dir">Укажите каталог</string>
    <string name="dialog_export_images">Экспорт изображений</string>
    <string name="dialog_select_config_file">Выберите файл конфигурации</string>
    <string name="dialog_select_key_file">Выберите ключевой файл</string>
    <string name="dialog_select_qr_file">Выберите файл qr-кода</string>
    <string name="dialog_enter_pass">Введите пароль</string>
    <string name="dialog_select_zip_file">Выберите архив конфигурации</string>
    <string name="dialog_wait">Пожалуйста подождите</string>
    <string name="pref_ip_address_title">IP Адреса</string>
    <string name="pref_ip_skzi_title">WAN СКМ</string>
    <string name="pref_ip_mon_title">Сервер мониторинга ключей</string>
    <string name="pref_ip_ats_title">АТС</string>
    <string name="pref_domain_name_title">Доменное имя сервера</string>
    <string name="pref_ip_dns_title">DNS</string>
    <string name="pref_ip_dns_second_title">DNS дополнительный</string>
    <string name="pref_vpn_info_title">VPN соединение</string>
    <string name="pref_skzi_title">СКЗИ</string>
    <string name="pref_connect_skzi_title">Соединение с СКЗИ</string>
    <string name="pref_connect_skzi_time_error">Ошибка синхронизации времени</string>
    <string name="pref_work_with_vpn_title">Работают через VPN</string>
    <string name="pref_key_compl_title">Комплекты ключей</string>
    <string name="key_working_settings_title">Комплект ключей (действующий)</string>
    <string name="key_next_settings_title">Комплект ключей (очередной)</string>
    <string name="key_num_komplect_title">Номер комплекта</string>
    <string name="key_name_komplect_title">Наименование комплекта</string>
    <string name="key_num_serial_title">Номер серии</string>
    <string name="key_num_of_keys_title">Количество ключей</string>
    <string name="key_date_begin_title">Дата начала действия комплекта</string>
    <string name="key_date_end_title">Дата конца действия комплекта</string>
    <string name="biometry_settings">Биометрия</string>
    <string name="new_biometry_title">Удалить биометрический контейнер</string>
    <string name="create_biometry_title">Создать биометрический контейнер</string>
    <string name="update_biometry_title">Переобучить биометрический контейнер</string>
    <string name="info_biometry_title">Информация о стойкости нейросетевого биометрического контейнера</string>
    <string name="export_biometry_title">Экспорт биометрического контейнера</string>
    <string name="import_biometry_title">Импорт биометрического контейнера</string>
    <string name="info_create_biometry">Будет создан биометрический контейнер, обученный формированию из лица пользователя пароля доступа.\nДля более качественного обучения рекомендуется снимать лицо под разными углами</string>
    <string name="info_update_biometry">Биометрический контейнер будет переобучен.\nДля более качественного обучения рекомендуется снимать лицо под разными углами</string>
    <string name="info_export_biometry">Биометрический контейнер будет зашифрован на пароле аутентификации и записан в файл \"ImpulseBiom.bc\" в указанный каталог </string>
    <string name="info_import_biometry">Выберите файл биометрического контейнера и введите пароль на котором он был зашифрован</string>
    <string name="info_biometry">Информация о стойкости нейросетевого биометрического контейнера</string>
    <string name="error_biometry_timeout">Превышено время распознования лица пользователя</string>
    <string name="error_biometry">Ошибка распознавания</string>
    <string name="error_biometry_data">Получены некорректные данные</string>
    <string name="biometry_result_ok">Биометрический контейнер создан</string>
    <string name="pref_media_title">Медиа</string>
    <string name="pref_audio_title">Аудио</string>
    <string name="pref_echo_cancellation">Эхоподавление</string>
    <string name="pref_echo_cancellation_summary">Устраняет эхо, слышимое другой стороной</string>
    <string name="failed">не удалось</string>
    <string name="pref_echo_canceller_calibration">Калибровка эхоподавления</string>
    <string name="pref_echo_tester">Тест эхо</string>
    <string name="ec_calibrating">Калибровка…</string>
    <string name="ec_calibrated">Откалибровано в %s мс</string>
    <string name="no_echo">Нет эха</string>
    <string name="pref_video_title">Видео</string>
    <string name="pref_preferred_video_size">Предпочитаемый размер видео</string>
    <string name="pref_overlay">Наложение видео</string>
    <string name="pref_overlay_summary">Отображать видеовызов наложением на стороннем приложении</string>
    <string name="pref_advanced_title">Дополнительно</string>
    <string name="pref_export_logs_title">Просмотр журнала работы с СКЗИ</string>
    <string name="pref_update_po_title">Обновление ПО</string>
    <string name="pref_reset_config_title">Сброс приложения</string>
    <string name="reset_config_info">"Сброс приложения приведет к удалению конфигурационной и ключевой информации. Приложение будет закрыто"</string>
    <string name="pref_change_regime_title">Смена режима работы</string>
    <string name="change_regime_info">Работа текущего режима работы будет завершена. Будет необходимо повторно пройти аутентификацию</string>
    <string name="pref_background_work_title">Контроль фоновой активности</string>
    <string name="pref_export_settings_title">Экспорт настроек</string>
    <string name="info_export_settings">Настройки будут записаны в файл \"Impulse.prefs\" в указанном каталоге</string>
    <string name="error_export_settings">Ошибка экспорта настроек</string>
    <string name="end_export_settings">"Настройки экспортированы"</string>
    <string name="pref_import_settings_title">Импорт настроек</string>
    <string name="update_po_title">Обновление ПО</string>
    <string name="current_version_po_title">Текущая версия ПО:</string>
    <string name="server_version_po_title">Версия ПО на сервере:</string>
    <string name="check_update">Проверить</string>
    <string name="download">Скачать</string>
    <string name="sort_history_by_callback">Входящие</string>
    <string name="sort_history_by_missed">Пропущенные</string>
    <string name="sort_history_by_made">Исходящие</string>
    <string name="sort_history_by_all">Все</string>
    <string name="registration_info">Укажите пароль доступа</string>
    <string name="empty_contact_list">Список контактов пуст</string>
    <string name="empty_history_list">Журнал звонков пуст</string>
    <string name="file_version_po_title">Версия скаченного ПО:</string>
    <string name="update">Обновить</string>
</resources>