<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/contactList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="?attr/colorPrimaryLite" />

        <TextView
            android:id="@+id/textEmptyContactList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/empty_contact_list"
            android:gravity="center"
            android:textSize="18sp"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contactList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:menu_colorNormal="?attr/colorSecondary"
            app:menu_colorPressed="?attr/colorSecondaryLight"
            app:menu_labels_style="@style/labelsStyle">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/btnNewContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_contact_add"
                app:fab_size="mini"
                app:fab_colorNormal="?attr/colorSecondary"
                app:fab_colorPressed="?attr/colorSecondaryLight"
                app:fab_label="@string/button_new_contact"/>

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/btnNewContactFromPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_contact_add_from_phone"
                app:fab_size="mini"
                app:fab_colorNormal="?attr/colorSecondary"
                app:fab_colorPressed="?attr/colorSecondaryLight"
                app:fab_label="@string/button_new_contact_from_phone"/>

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/btnSyncContacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sync"
                app:fab_size="mini"
                app:fab_colorNormal="?attr/colorSecondary"
                app:fab_colorPressed="?attr/colorSecondaryLight"
                app:fab_label="@string/button_synchr_contacts"/>

        </com.github.clans.fab.FloatingActionMenu>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>