<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_po_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp"
            android:textSize="28sp"
            android:gravity="center"
            android:textColor="?android:attr/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_marginTop="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_version_po_title"
                    android:textSize="16sp"
                    android:layout_gravity="center|start"
                    android:textColor="@android:color/black"
                    android:layout_margin="8dp"/>

                <TextView
                    android:id="@+id/current_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="100"
                    android:layout_gravity="center_vertical"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/new_version_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="4dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/new_version_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/server_version_po_title"
                    android:textSize="16sp"
                    android:layout_gravity="center|start"
                    android:textColor="@android:color/black"
                    android:layout_margin="8dp"/>

                <TextView
                    android:id="@+id/available_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1.0.1"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/file_version_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="4dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/file_version_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_version_po_title"
                    android:textSize="16sp"
                    android:layout_gravity="center|start"
                    android:textColor="@android:color/black"
                    android:layout_margin="8dp"/>

                <TextView
                    android:id="@+id/file_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="101"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/progress_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/progressInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Проверка обновлений..."
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"/>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCheckUpdate"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:elevation="2dp"
            android:text="@string/check_update"
            app:iconGravity="start"
            app:icon="@drawable/ic_check_update"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnDownloadUpdate"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDownloadUpdate"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:elevation="2dp"
            android:text="@string/download"
            app:iconGravity="start"
            app:icon="@drawable/ic_download"
            app:layout_constraintStart_toEndOf="@+id/btnCheckUpdate"
            app:layout_constraintEnd_toStartOf="@id/btnUpdate"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            tools:visibility="visible"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdate"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:elevation="2dp"
            android:text="@string/update"
            app:iconGravity="start"
            app:icon="@drawable/ic_update"
            app:layout_constraintStart_toEndOf="@+id/btnDownloadUpdate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            tools:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>